relax some java checks
enable preview code so that java 21 can run the FFM tests
enable native access so that restricted methods (System.loadLibrary()) don’t warn